fix(react): fix div stretching in body

--- a/src/Body.css
+++ b/src/Body.css
@@ -1,6 +1,6 @@
 .AppBody {
     width: 100%;
     display: flex;
-    align-items: flex-start;
+    align-items: stretch;
     justify-content: center;
 }
